# TootNotify

./: .gitignore  README.md  Readme.md  pyproject.toml  requirements.txt  toot_notify.py
tests/: test_tootnotify.py
tootnotify/: tootnotify.py
