[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tootnotify"]

[project]
name = "tootnotify"
version = "1.0.0-RC1"
authors = [
    {name="Jorge A. Duarte", email="babetoduarte@gmail.com"},
]
description = "Command line tool to send DM notifications to a mastodon user."
readme = "README.md"
keywords = ["mastodon", "notification"]
requires-python = ">=3.7"
dependencies = [
    "mastodon.py>=1.8.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.scripts]
tootnotify = "tootnotify.tootnotify:run_cli"

[project.urls]
"Homepage" = "https://github.com/babetoduarte/TootNotify"
"Bug Tracker" = "https://github.com/babetoduarte/TootNotify/issues"
